# sxope-nbinstaller

./: .pre-commit-config.yaml  Makefile  pyproject.toml
src/sxope_nbinstaller/: __init__.py  main.py  misc.py  tasks.py
tests/: test_main.py  test_misc.py  test_tasks.py
